add the abstracts to the bio for easier location

--- a/bio-list.tex
+++ b/bio-list.tex
@@ -1,40 +1,284 @@
 \input{../hid-sp18-203/bio-clarke-jack.tex}
+
+hid-sp18-203
+
+\url{https://github.com/cloudmesh-community/hid-sp18-203}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-203/issue}
 \input{../hid-sp18-204/bio-Gruenberg-Max.tex}
+
+hid-sp18-204
+
+\url{https://github.com/cloudmesh-community/hid-sp18-204}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-204/issue}
 \input{../hid-sp18-206/bio-mhatre-krish-hemant.tex}
+
+hid-sp18-206
+
+\url{https://github.com/cloudmesh-community/hid-sp18-206}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-206/issue}
 \input{../hid-sp18-208/bio-fanbo-sun.tex}
+
+hid-sp18-208
+
+\url{https://github.com/cloudmesh-community/hid-sp18-208}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-208/issue}
 \input{../hid-sp18-209/bio-tugman-anthony.tex}
+
+hid-sp18-209
+
+\url{https://github.com/cloudmesh-community/hid-sp18-209}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-209/issue}
 \input{../hid-sp18-401/bio-arra-goutham.tex}
+
+hid-sp18-401
+
+\url{https://github.com/cloudmesh-community/hid-sp18-401}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-401/issue}
 \input{../hid-sp18-402/bio-athaley-sushant.tex}
+
+hid-sp18-402
+
+\url{https://github.com/cloudmesh-community/hid-sp18-402}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-402/issue}
 \input{../hid-sp18-403/bio-axthelm-alex.tex}
+
+hid-sp18-403
+
+\url{https://github.com/cloudmesh-community/hid-sp18-403}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-403/issue}
 \input{../hid-sp18-406/bio-dg-ramyashree.tex}
+
+hid-sp18-406
+
+\url{https://github.com/cloudmesh-community/hid-sp18-406}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-406/issue}
 \input{../hid-sp18-409/bio-kadupitige-kadupitiya.tex}
+
+hid-sp18-409
+
+\url{https://github.com/cloudmesh-community/hid-sp18-409}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-409/issue}
 \input{../hid-sp18-410/bio-Kamatgi-Karan.tex}
+
+hid-sp18-410
+
+\url{https://github.com/cloudmesh-community/hid-sp18-410}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-410/issue}
 \input{../hid-sp18-411/bio-kaveripakam-venkateshaditya.tex}
+
+hid-sp18-411
+
+\url{https://github.com/cloudmesh-community/hid-sp18-411}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-411/issue}
 \input{../hid-sp18-416/bio-Ossen-Sabra.tex}
+
+hid-sp18-416
+
+\url{https://github.com/cloudmesh-community/hid-sp18-416}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-416/issue}
 \input{../hid-sp18-417/bio-ray-rashmi.tex}
+
+hid-sp18-417
+
+\url{https://github.com/cloudmesh-community/hid-sp18-417}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-417/issue}
 \input{../hid-sp18-419/bio-sobolik-bertolt.tex}
+
+hid-sp18-419
+
+\url{https://github.com/cloudmesh-community/hid-sp18-419}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-419/issue}
 \input{../hid-sp18-420/bio-sowani-swarnima.tex}
+
+hid-sp18-420
+
+\url{https://github.com/cloudmesh-community/hid-sp18-420}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-420/issue}
 \input{../hid-sp18-421/bio-Vijjigiri-Priyadarshini.tex}
+
+hid-sp18-421
+
+\url{https://github.com/cloudmesh-community/hid-sp18-421}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-421/issue}
 \input{../hid-sp18-422/bio-cutilli-benjamin.tex}
+
+hid-sp18-422
+
+\url{https://github.com/cloudmesh-community/hid-sp18-422}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-422/issue}
 \input{../hid-sp18-501/bio-tolu-agunbiade.tex}
+
+hid-sp18-501
+
+\url{https://github.com/cloudmesh-community/hid-sp18-501}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-501/issue}
 \input{../hid-sp18-502/bio-alshi-ankita.tex}
+
+hid-sp18-502
+
+\url{https://github.com/cloudmesh-community/hid-sp18-502}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-502/issue}
 \input{../hid-sp18-503/bio-arnav-arnav.tex}
+
+hid-sp18-503
+
+\url{https://github.com/cloudmesh-community/hid-sp18-503}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-503/issue}
 \input{../hid-sp18-504/bio-moeen-arshad.tex}
+
+hid-sp18-504
+
+\url{https://github.com/cloudmesh-community/hid-sp18-504}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-504/issue}
 \input{../hid-sp18-505/bio-averill-cate.tex}
+
+hid-sp18-505
+
+\url{https://github.com/cloudmesh-community/hid-sp18-505}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-505/issue}
 \input{../hid-sp18-506/bio-esteban-orly.tex}
+
+hid-sp18-506
+
+\url{https://github.com/cloudmesh-community/hid-sp18-506}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-506/issue}
 \input{../hid-sp18-508/bio-guo-yue.tex}
+
+hid-sp18-508
+
+\url{https://github.com/cloudmesh-community/hid-sp18-508}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-508/issue}
 \input{../hid-sp18-511/bio-Khandelwal-Sandeep.tex}
+
+hid-sp18-511
+
+\url{https://github.com/cloudmesh-community/hid-sp18-511}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-511/issue}
 \input{../hid-sp18-512/bio-kikaya-felix.tex}
+
+hid-sp18-512
+
+\url{https://github.com/cloudmesh-community/hid-sp18-512}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-512/issue}
 \input{../hid-sp18-513/bio-kugan-uma.tex}
+
+hid-sp18-513
+
+\url{https://github.com/cloudmesh-community/hid-sp18-513}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-513/issue}
 \input{../hid-sp18-514/bio-lambadi-ravinder.tex}
+
+hid-sp18-514
+
+\url{https://github.com/cloudmesh-community/hid-sp18-514}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-514/issue}
 \input{../hid-sp18-515/bio-Lin-Qingyun.tex}
+
+hid-sp18-515
+
+\url{https://github.com/cloudmesh-community/hid-sp18-515}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-515/issue}
 \input{../hid-sp18-517/bio-pitkar-harshad.tex}
+
+hid-sp18-517
+
+\url{https://github.com/cloudmesh-community/hid-sp18-517}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-517/issue}
 \input{../hid-sp18-518/bio-robinson-michael.tex}
+
+hid-sp18-518
+
+\url{https://github.com/cloudmesh-community/hid-sp18-518}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-518/issue}
 \input{../hid-sp18-519/bio-shukla-saurabh.tex}
+
+hid-sp18-519
+
+\url{https://github.com/cloudmesh-community/hid-sp18-519}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-519/issue}
 \input{../hid-sp18-520/bio-Sinha-Arijit.tex}
+
+hid-sp18-520
+
+\url{https://github.com/cloudmesh-community/hid-sp18-520}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-520/issue}
 \input{../hid-sp18-521/bio-steinbruegge-scott.tex}
+
+hid-sp18-521
+
+\url{https://github.com/cloudmesh-community/hid-sp18-521}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-521/issue}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-521/blob/master//technology/abstract-athena.tex}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-521/blob/master//technology/abstract-xms.tex}
 \input{../hid-sp18-523/bio-tandon-ritesh.tex}
+
+hid-sp18-523
+
+\url{https://github.com/cloudmesh-community/hid-sp18-523}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-523/issue}
 \input{../hid-sp18-524/bio-tian-hao.tex}
+
+hid-sp18-524
+
+\url{https://github.com/cloudmesh-community/hid-sp18-524}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-524/issue}
 \input{../hid-sp18-525/bio-bruce-walker.tex}
+
+hid-sp18-525
+
+\url{https://github.com/cloudmesh-community/hid-sp18-525}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-525/issue}
 \input{../hid-sp18-601/bio-gianlupi-juliano.tex}
+
+hid-sp18-601
+
+\url{https://github.com/cloudmesh-community/hid-sp18-601}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-601/issue}
 \input{../hid-sp18-602/bio-naredla-keerthi.tex}
+
+hid-sp18-602
+
+\url{https://github.com/cloudmesh-community/hid-sp18-602}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-602/issue}
