--- a/bio-list.tex
+++ b/bio-list.tex
@@ -1,242 +1,380 @@
 \input{../hid-sp18-203/bio-clarke-jack.tex}
 
+\begin{IU}
+
 hid-sp18-203
 
 \url{https://github.com/cloudmesh-community/hid-sp18-203}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-203/issue}
+
+\end{IU}
 \input{../hid-sp18-204/bio-Gruenberg-Max.tex}
+
+\begin{IU}
 
 hid-sp18-204
 
 \url{https://github.com/cloudmesh-community/hid-sp18-204}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-204/issue}
+
+\end{IU}
 \input{../hid-sp18-206/bio-mhatre-krish-hemant.tex}
+
+\begin{IU}
 
 hid-sp18-206
 
 \url{https://github.com/cloudmesh-community/hid-sp18-206}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-206/issue}
+
+\end{IU}
 \input{../hid-sp18-208/bio-fanbo-sun.tex}
+
+\begin{IU}
 
 hid-sp18-208
 
 \url{https://github.com/cloudmesh-community/hid-sp18-208}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-208/issue}
+
+\end{IU}
 \input{../hid-sp18-209/bio-tugman-anthony.tex}
+
+\begin{IU}
 
 hid-sp18-209
 
 \url{https://github.com/cloudmesh-community/hid-sp18-209}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-209/issue}
+
+\end{IU}
 \input{../hid-sp18-401/bio-arra-goutham.tex}
+
+\begin{IU}
 
 hid-sp18-401
 
 \url{https://github.com/cloudmesh-community/hid-sp18-401}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-401/issue}
+
+\end{IU}
 \input{../hid-sp18-402/bio-athaley-sushant.tex}
+
+\begin{IU}
 
 hid-sp18-402
 
 \url{https://github.com/cloudmesh-community/hid-sp18-402}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-402/issue}
+
+\end{IU}
 \input{../hid-sp18-403/bio-axthelm-alex.tex}
+
+\begin{IU}
 
 hid-sp18-403
 
 \url{https://github.com/cloudmesh-community/hid-sp18-403}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-403/issue}
+
+\end{IU}
 \input{../hid-sp18-406/bio-dg-ramyashree.tex}
+
+\begin{IU}
 
 hid-sp18-406
 
 \url{https://github.com/cloudmesh-community/hid-sp18-406}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-406/issue}
+
+\end{IU}
 \input{../hid-sp18-409/bio-kadupitige-kadupitiya.tex}
+
+\begin{IU}
 
 hid-sp18-409
 
 \url{https://github.com/cloudmesh-community/hid-sp18-409}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-409/issue}
+
+\end{IU}
 \input{../hid-sp18-410/bio-Kamatgi-Karan.tex}
+
+\begin{IU}
 
 hid-sp18-410
 
 \url{https://github.com/cloudmesh-community/hid-sp18-410}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-410/issue}
+
+\end{IU}
 \input{../hid-sp18-411/bio-kaveripakam-venkateshaditya.tex}
+
+\begin{IU}
 
 hid-sp18-411
 
 \url{https://github.com/cloudmesh-community/hid-sp18-411}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-411/issue}
+
+\end{IU}
 \input{../hid-sp18-416/bio-Ossen-Sabra.tex}
+
+\begin{IU}
 
 hid-sp18-416
 
 \url{https://github.com/cloudmesh-community/hid-sp18-416}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-416/issue}
+
+\end{IU}
 \input{../hid-sp18-417/bio-ray-rashmi.tex}
+
+\begin{IU}
 
 hid-sp18-417
 
 \url{https://github.com/cloudmesh-community/hid-sp18-417}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-417/issue}
+
+\end{IU}
 \input{../hid-sp18-419/bio-sobolik-bertolt.tex}
+
+\begin{IU}
 
 hid-sp18-419
 
 \url{https://github.com/cloudmesh-community/hid-sp18-419}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-419/issue}
+
+\end{IU}
 \input{../hid-sp18-420/bio-sowani-swarnima.tex}
+
+\begin{IU}
 
 hid-sp18-420
 
 \url{https://github.com/cloudmesh-community/hid-sp18-420}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-420/issue}
+
+\end{IU}
 \input{../hid-sp18-421/bio-Vijjigiri-Priyadarshini.tex}
+
+\begin{IU}
 
 hid-sp18-421
 
 \url{https://github.com/cloudmesh-community/hid-sp18-421}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-421/issue}
+
+\end{IU}
 \input{../hid-sp18-422/bio-cutilli-benjamin.tex}
+
+\begin{IU}
 
 hid-sp18-422
 
 \url{https://github.com/cloudmesh-community/hid-sp18-422}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-422/issue}
+
+\end{IU}
 \input{../hid-sp18-501/bio-tolu-agunbiade.tex}
+
+\begin{IU}
 
 hid-sp18-501
 
 \url{https://github.com/cloudmesh-community/hid-sp18-501}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-501/issue}
+
+\end{IU}
 \input{../hid-sp18-502/bio-alshi-ankita.tex}
+
+\begin{IU}
 
 hid-sp18-502
 
 \url{https://github.com/cloudmesh-community/hid-sp18-502}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-502/issue}
+
+\end{IU}
 \input{../hid-sp18-503/bio-arnav-arnav.tex}
+
+\begin{IU}
 
 hid-sp18-503
 
 \url{https://github.com/cloudmesh-community/hid-sp18-503}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-503/issue}
+
+\end{IU}
 \input{../hid-sp18-504/bio-moeen-arshad.tex}
+
+\begin{IU}
 
 hid-sp18-504
 
 \url{https://github.com/cloudmesh-community/hid-sp18-504}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-504/issue}
+
+\end{IU}
 \input{../hid-sp18-505/bio-averill-cate.tex}
+
+\begin{IU}
 
 hid-sp18-505
 
 \url{https://github.com/cloudmesh-community/hid-sp18-505}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-505/issue}
+
+\end{IU}
 \input{../hid-sp18-506/bio-esteban-orly.tex}
+
+\begin{IU}
 
 hid-sp18-506
 
 \url{https://github.com/cloudmesh-community/hid-sp18-506}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-506/issue}
+
+\end{IU}
 \input{../hid-sp18-508/bio-guo-yue.tex}
+
+\begin{IU}
 
 hid-sp18-508
 
 \url{https://github.com/cloudmesh-community/hid-sp18-508}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-508/issue}
+
+\end{IU}
 \input{../hid-sp18-511/bio-Khandelwal-Sandeep.tex}
+
+\begin{IU}
 
 hid-sp18-511
 
 \url{https://github.com/cloudmesh-community/hid-sp18-511}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-511/issue}
+
+\end{IU}
 \input{../hid-sp18-512/bio-kikaya-felix.tex}
+
+\begin{IU}
 
 hid-sp18-512
 
 \url{https://github.com/cloudmesh-community/hid-sp18-512}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-512/issue}
+
+\end{IU}
 \input{../hid-sp18-513/bio-kugan-uma.tex}
+
+\begin{IU}
 
 hid-sp18-513
 
 \url{https://github.com/cloudmesh-community/hid-sp18-513}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-513/issue}
+
+\end{IU}
 \input{../hid-sp18-514/bio-lambadi-ravinder.tex}
+
+\begin{IU}
 
 hid-sp18-514
 
 \url{https://github.com/cloudmesh-community/hid-sp18-514}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-514/issue}
+
+\end{IU}
 \input{../hid-sp18-515/bio-Lin-Qingyun.tex}
+
+\begin{IU}
 
 hid-sp18-515
 
 \url{https://github.com/cloudmesh-community/hid-sp18-515}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-515/issue}
+
+\end{IU}
 \input{../hid-sp18-517/bio-pitkar-harshad.tex}
+
+\begin{IU}
 
 hid-sp18-517
 
 \url{https://github.com/cloudmesh-community/hid-sp18-517}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-517/issue}
+
+\end{IU}
 \input{../hid-sp18-518/bio-robinson-michael.tex}
+
+\begin{IU}
 
 hid-sp18-518
 
 \url{https://github.com/cloudmesh-community/hid-sp18-518}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-518/issue}
+
+\end{IU}
 \input{../hid-sp18-519/bio-shukla-saurabh.tex}
+
+\begin{IU}
 
 hid-sp18-519
 
 \url{https://github.com/cloudmesh-community/hid-sp18-519}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-519/issue}
+
+\end{IU}
 \input{../hid-sp18-520/bio-Sinha-Arijit.tex}
+
+\begin{IU}
 
 hid-sp18-520
 
 \url{https://github.com/cloudmesh-community/hid-sp18-520}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-520/issue}
+
+\end{IU}
 \input{../hid-sp18-521/bio-steinbruegge-scott.tex}
+
+\begin{IU}
 
 hid-sp18-521
 
@@ -244,41 +382,61 @@ hid-sp18-521
 
 \url{https://github.com/cloudmesh-community/hid-sp18-521/issue}
 
-\url{https://github.com/cloudmesh-community/hid-sp18-521/blob/master//technology/abstract-athena.tex}
+\href{https://github.com/cloudmesh-community/hid-sp18-521/blob/master//technology/abstract-athena.tex}{abstract-athena.tex}
 
-\url{https://github.com/cloudmesh-community/hid-sp18-521/blob/master//technology/abstract-xms.tex}
+\end{IU}
 \input{../hid-sp18-523/bio-tandon-ritesh.tex}
+
+\begin{IU}
 
 hid-sp18-523
 
 \url{https://github.com/cloudmesh-community/hid-sp18-523}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-523/issue}
+
+\end{IU}
 \input{../hid-sp18-524/bio-tian-hao.tex}
+
+\begin{IU}
 
 hid-sp18-524
 
 \url{https://github.com/cloudmesh-community/hid-sp18-524}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-524/issue}
+
+\end{IU}
 \input{../hid-sp18-525/bio-bruce-walker.tex}
+
+\begin{IU}
 
 hid-sp18-525
 
 \url{https://github.com/cloudmesh-community/hid-sp18-525}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-525/issue}
+
+\end{IU}
 \input{../hid-sp18-601/bio-gianlupi-juliano.tex}
+
+\begin{IU}
 
 hid-sp18-601
 
 \url{https://github.com/cloudmesh-community/hid-sp18-601}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-601/issue}
+
+\end{IU}
 \input{../hid-sp18-602/bio-naredla-keerthi.tex}
+
+\begin{IU}
 
 hid-sp18-602
 
 \url{https://github.com/cloudmesh-community/hid-sp18-602}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-602/issue}
+
+\end{IU}
