--- a/bio-list.tex
+++ b/bio-list.tex
@@ -1,3 +1,67 @@
+\part{Technologioes}
+\chapter{New Technologies}
+\input{../hid-sp18-405/technology/abstract-linkedinwherehows.tex}
+
+\begin{IU}
+
+hid-sp18-405
+
+\href{https://github.com/cloudmesh-community/hid-sp18-405/blob/master//technology/abstract-linkedinwherehows.tex}{abstract-linkedinwherehows.tex}
+
+\end{IU}
+
+\input{../hid-sp18-405/technology/abstract-lumify.tex}
+
+\begin{IU}
+
+hid-sp18-405
+
+\href{https://github.com/cloudmesh-community/hid-sp18-405/blob/master//technology/abstract-lumify.tex}{abstract-lumify.tex}
+
+\end{IU}
+
+\input{../hid-sp18-405/technology/abstract-nifi.tex}
+
+\begin{IU}
+
+hid-sp18-405
+
+\href{https://github.com/cloudmesh-community/hid-sp18-405/blob/master//technology/abstract-nifi.tex}{abstract-nifi.tex}
+
+\end{IU}
+
+\input{../hid-sp18-405/technology/abstract-samoa.tex}
+
+\begin{IU}
+
+hid-sp18-405
+
+\href{https://github.com/cloudmesh-community/hid-sp18-405/blob/master//technology/abstract-samoa.tex}{abstract-samoa.tex}
+
+\end{IU}
+
+\input{../hid-sp18-405/technology/abstract-stardog.tex}
+
+\begin{IU}
+
+hid-sp18-405
+
+\href{https://github.com/cloudmesh-community/hid-sp18-405/blob/master//technology/abstract-stardog.tex}{abstract-stardog.tex}
+
+\end{IU}
+
+\input{../hid-sp18-521/technology/abstract-athena.tex}
+
+\begin{IU}
+
+hid-sp18-521
+
+\href{https://github.com/cloudmesh-community/hid-sp18-521/blob/master//technology/abstract-athena.tex}{abstract-athena.tex}
+
+\end{IU}
+
+\part{Biographies}
+\chapter{Volume Contributors}
 \input{../hid-sp18-203/bio-clarke-jack.tex}
 
 \begin{IU}
