--- a/bio-list.tex
+++ b/bio-list.tex
@@ -326,6 +326,17 @@ hid-sp18-506
 \url{https://github.com/cloudmesh-community/hid-sp18-506/issue}
 
 \end{IU}
+\input{../hid-sp18-507/bio-giuliani-stephen.tex}
+
+\begin{IU}
+
+hid-sp18-507
+
+\url{https://github.com/cloudmesh-community/hid-sp18-507}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-507/issue}
+
+\end{IU}
 \input{../hid-sp18-508/bio-guo-yue.tex}
 
 \begin{IU}
